// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tolltip /> > should match snapshot when closed 1`] = `
<body
  class="vars_OD_Base__1f5yyro0"
>
  <div>
    <div
      class="vars_OD_Base__1f5yyro0"
    >
      <div>
        trigger
      </div>
    </div>
  </div>
  <div
    class="vars_OD_Base__1f5yyro0"
  >
    <div
      aria-hidden="true"
      class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz Positioner_root__1d54b7d0"
    />
  </div>
</body>
`;

exports[`<Tolltip /> > should match snapshot when opened 1`] = `
<body
  class="vars_OD_Base__1f5yyro0"
>
  <div>
    <div
      class="vars_OD_Base__1f5yyro0"
    >
      <div>
        trigger
      </div>
    </div>
  </div>
  <div
    class="vars_OD_Base__1f5yyro0"
  >
    <div
      aria-hidden="false"
      class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz Positioner_root__1d54b7d0"
      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_width_full__3xgq1lfv useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_userSelect_none__3xgq1lgi useBoxStyles_pointerEvents_none__3xgq1lic useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l98 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_gray900__3xgq1lea Tooltip_root__1qliafn0"
      >
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_textAlign_left__3xgq1lg1 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_2__1xnpmd72"
        >
          tooltip content
        </span>
      </div>
    </div>
  </div>
</body>
`;
